--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 .env
 node_modules
+coverage/
+dist/
+commit_message.txt
+*.log
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.tgz
+*.swp
+*.swo
+src/tests/integration/
+src/tests/setup.ts
