--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,12 @@ services:
       - mongo-data:/data/db
     restart: always
 
+  frontend:
+    image: bakr458/jira-clone-frontend:latest
+    container_name: jira-frontend
+    ports:
+      - "3000:3000"
+    restart: always
+
 volumes:
   mongo-data:
